Fixes weird overflow / scroll event conflict! Woohoo!

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,6 +16,8 @@ html, body {
   width: 100%;
   height: 100%;
   background-color: #BBB;
+}
+body {
   overflow-x: hidden;
 }
 nav {
